# RAG-Chatbot-MVP

./: .env.example  .gitignore  README.md  pyproject.toml  readme.md  requirements.txt
agent/: config.py  flow_image_gen.py  graph.py  llm.py  main.py  nodes.py  prompts.py  retriever.py  schema.py  state.py
agent/mcp_tools/: chart_server.py  csv_gen_server.py  mcp_client.py
agent/utils/: aggregator.py  logger.py
database/data-collection/: data_card.md
database/user-database/: industrial_crop_production_3_year_moving_averages_2017_2022_w_p_labuan_20251031_051538.csv  trend_crop_production_malaysia_2017_2022_20251031_045555.csv
eval/: queries_with_results.jsonl
notebooks/: ingestor.ipynb
